deployment.yaml
apiVersion: apps/v1 # Usa apps/v1beta2 para versiones anteriores a 1.9.0
kind: Deployment
metadata:
  name: gatlingresults-test-deployment
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 2 
  template:
    metadata:
      labels:
        app: nginx

    spec:
      containers:
      - name: de.icr.io/devops-tools/gatlingresults-nginx
        image: de.icr.io/devops-tools/gatlingresults-nginx
        ports:
        - containerPort: 80
        imagePullSecrets:
          - name: ibm-registry-apikey
