service.yaml
kind: Service
apiVersion: v1
metadata:
  name: gatlingresults-test-deployment
  namespace: develop
  uid: d84e7a93-ed08-4a36-a133-af79b3643210
  resourceVersion: '14675740'
  creationTimestamp: '2022-05-31T13:58:56Z'
  labels:
    io.kompose.service: gatlingresults-test-deployment
  annotations:
    kompose.cmd: kompose convert
    kompose.service.type: ClusterIP
    kompose.version: 1.26.0 (40646f47)
    
  managedFields:
    - manager: kubectl-client-side-apply
      operation: Update
      apiVersion: v1
      time: '2022-05-31T13:58:56Z'
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:kompose.cmd: {}
            f:kompose.service.type: {}
            f:kompose.version: {}
            f:kubectl.kubernetes.io/last-applied-configuration: {}
          f:labels:
            .: {}
            f:io.kompose.service: {}
        f:spec:
          f:internalTrafficPolicy: {}
          f:ports:
            .: {}
            k:{"port":9000,"protocol":"TCP"}:
              .: {}
              f:name: {}
              f:port: {}
              f:protocol: {}
              f:targetPort: {}
          f:selector: {}
          f:sessionAffinity: {}
          f:type: {}
spec:
  ports:
    - name: '80'
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: gatlingresults-test-deployment

  type: ClusterIP
  sessionAffinity: None
  internalTrafficPolicy: Cluster
status:
  loadBalancer: {}
